services/inventory/deployments/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shopee-inventory
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8086
    - name: grpc
      port: 9096
      targetPort: 9096
  selector:
    app: shopee-inventory
