services/inventory/deployments/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: shopee-inventory
spec:
  podSelector:
    matchLabels:
      app: shopee-inventory
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: shopee-gateway
        - podSelector:
            matchLabels:
              app: shopee-order
      ports:
        - port: 8086
        - port: 9096
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: shopee-mysql
      ports:
        - port: 3306
    - to:
        - podSelector:
            matchLabels:
              app: shopee-redis
      ports:
        - port: 6379
    - to:
        - podSelector:
            matchLabels:
              app: shopee-kafka
      ports:
        - port: 9092
